# discord_photo_bot

./: .gitignore  Cargo.toml  README.md
run/: gallery.js  picture_gallary.html  styles.css
src/: discord_util.rs  main.rs  picture_template.html  util.rs  webserver.rs  website_builder.rs
src/resources/: gallery.js  gallery_styles.css  gallery_template.html  styles.css  webserver.py
