[package]
name = "discord_photo_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = { version = "1.17.0" }
handlebars = "5.0.0-beta.1"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread"] }
tiny_http = "0.12.0"
serde = "1.0.152"
ascii = "1.1.0"